# neuralnetwork

./: CMakeLists.txt  LICENSE
include/neuralnetwork/: Matrix.h  Model.h  Vector.h
include/neuralnetwork/activations/: Product.h  ReLU.h  Sigmoid.h
include/neuralnetwork/dataset/: MNIST.h
include/neuralnetwork/distributions/: NormalDistribution.h  SequenceDistribution.h
include/neuralnetwork/layers/: DenseLayer.h
src/: main.cxx  tests.cxx
